[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/ui/controls/time_of_day_control.gd" type="Script" id=1]
[ext_resource path="res://src/ui/controls/datetime_control.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ui/speed_controls.png" type="Texture" id=3]

[sub_resource type="ButtonGroup" id=16]
resource_name = "SpeedControlGroup"

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 416, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 448, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 32, 32 )

[node name="TimeOfDayControl" type="MarginContainer"]
margin_right = 160.0
margin_bottom = 56.0
rect_min_size = Vector2( 160, 0 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 176.0
margin_bottom = 56.0

[node name="Button_SetDate" type="Button" parent="HBoxContainer"]
visible = false
margin_right = 66.0
margin_bottom = 74.0
focus_mode = 0
enabled_focus_mode = 0
text = "Set Date"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 176.0
margin_bottom = 56.0

[node name="DateLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 100.0
margin_bottom = 14.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Sunday 00:00"

[node name="ButtonGroup" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 176.0
margin_bottom = 50.0

[node name="TextureButton_Pause" type="TextureButton" parent="HBoxContainer/VBoxContainer/ButtonGroup"]
margin_right = 32.0
margin_bottom = 32.0
focus_mode = 0
toggle_mode = true
group = SubResource( 16 )
texture_normal = SubResource( 2 )
texture_pressed = SubResource( 1 )
texture_hover = SubResource( 3 )
texture_focused = SubResource( 1 )

[node name="TextureButton_1x" type="TextureButton" parent="HBoxContainer/VBoxContainer/ButtonGroup"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
focus_mode = 0
toggle_mode = true
pressed = true
group = SubResource( 16 )
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
texture_focused = SubResource( 5 )

[node name="TextureButton_5x" type="TextureButton" parent="HBoxContainer/VBoxContainer/ButtonGroup"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
focus_mode = 0
toggle_mode = true
group = SubResource( 16 )
texture_normal = SubResource( 7 )
texture_pressed = SubResource( 8 )
texture_hover = SubResource( 9 )

[node name="TextureButton_10x" type="TextureButton" parent="HBoxContainer/VBoxContainer/ButtonGroup"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 32.0
focus_mode = 0
toggle_mode = true
group = SubResource( 16 )
texture_normal = SubResource( 10 )
texture_pressed = SubResource( 11 )
texture_hover = SubResource( 12 )
texture_focused = SubResource( 11 )

[node name="TextureButton_20x" type="TextureButton" parent="HBoxContainer/VBoxContainer/ButtonGroup"]
margin_left = 144.0
margin_right = 176.0
margin_bottom = 32.0
focus_mode = 0
toggle_mode = true
group = SubResource( 16 )
texture_normal = SubResource( 13 )
texture_pressed = SubResource( 14 )
texture_hover = SubResource( 15 )
texture_focused = SubResource( 14 )

[node name="TimeOfDaySpeedLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
visible = false
margin_top = 54.0
margin_right = 176.0
margin_bottom = 68.0
text = "Speed"

[node name="Panel_SetDate" type="Panel" parent="."]
visible = false
margin_right = 380.0
margin_bottom = 100.0
rect_min_size = Vector2( 380, 100 )
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="Panel_SetDate"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel_SetDate/CenterContainer"]
margin_left = 9.0
margin_top = 38.0
margin_right = 371.0
margin_bottom = 62.0

[node name="DateTimeControl" parent="Panel_SetDate/CenterContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_right = 279.0
margin_bottom = 24.0

[node name="Button_Accept" type="Button" parent="Panel_SetDate/CenterContainer/HBoxContainer"]
margin_left = 283.0
margin_right = 339.0
margin_bottom = 24.0
text = "Accept"

[node name="Button_Close" type="Button" parent="Panel_SetDate/CenterContainer/HBoxContainer"]
margin_left = 343.0
margin_right = 362.0
margin_bottom = 24.0
text = "x"

[connection signal="pressed" from="HBoxContainer/Button_SetDate" to="." method="_on_Button_SetDate_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonGroup/TextureButton_Pause" to="." method="_on_Button_Speed_pressed" binds= [ 0 ]]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonGroup/TextureButton_1x" to="." method="_on_Button_Speed_pressed" binds= [ 1 ]]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonGroup/TextureButton_5x" to="." method="_on_Button_Speed_pressed" binds= [ 5 ]]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonGroup/TextureButton_10x" to="." method="_on_Button_Speed_pressed" binds= [ 10 ]]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonGroup/TextureButton_20x" to="." method="_on_Button_Speed_pressed" binds= [ 20 ]]
[connection signal="pressed" from="Panel_SetDate/CenterContainer/HBoxContainer/Button_Accept" to="." method="_on_Button_SetDate_User_pressed" binds= [ true ]]
[connection signal="pressed" from="Panel_SetDate/CenterContainer/HBoxContainer/Button_Close" to="." method="_on_Button_SetDate_User_pressed" binds= [ false ]]
